fix css text align

--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,13 @@
 
 body {
     background-color: #b91450;
-    text-align: center;
+    
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h2 {
     color: white;
+    text-align: center;
 }
 
 .container {
@@ -18,6 +19,7 @@ h2 {
     margin: 0 auto;
     padding: 20px 0;
     border-radius: 20px;
+    text-align: center;
 
 }
 
